Adding and deleting properties of objects

--- a/ch5/objectMagnets.html
+++ b/ch5/objectMagnets.html
@@ -18,6 +18,12 @@
     var speak = dog.name + " says " + bark + " when he wants to " + 
 dog.activity;
     console.log(speak);
+
+    dog.dogYears = 35;
+    console.log(dog);
+
+    delete dog.dogYears;
+    console.log(dog);
   </script>
 </head>
 <body>
