--- a/ch5/addingBehaviourToObjects.html
+++ b/ch5/addingBehaviourToObjects.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <script>
-    var fiat = {
+    var fiat ={
       make: "Fiat",
       model: "500",
       year: 1957,
@@ -10,12 +11,25 @@
       passengers: 2,
       convertible: false,
       mileage: 88000,
+      started: false,
+      start: function() {
+        started = true;
+      },
+      stop: function() {
+        started = false;
+      },
       drive: function() {
-        alert("Zoom zoom!");
+        if(started) {
+          alert("Zoom zoom!");
+        } else {
+          alert("You need to start the engine first.");
+        }
       }
-    }
-
+    };
     fiat.drive();
+    fiat.start();
+    fiat.drive();
+    fiat.stop();
   </script>
 </head>
 <body>
