--- a/ch5/addingBehaviourToObjects.html
+++ b/ch5/addingBehaviourToObjects.html
@@ -13,13 +13,13 @@
       mileage: 88000,
       started: false,
       start: function() {
-        started = true;
+        this.started = true;
       },
       stop: function() {
-        started = false;
+        this.started = false;
       },
       drive: function() {
-        if(started) {
+        if(this.started) {
           alert("Zoom zoom!");
         } else {
           alert("You need to start the engine first.");
