--- a/ch5/addingBehaviourToObjects.html
+++ b/ch5/addingBehaviourToObjects.html
@@ -12,6 +12,7 @@
       convertible: false,
       mileage: 88000,
       started: false,
+      fuel: 0,
       start: function() {
         this.started = true;
       },
@@ -20,14 +21,28 @@
       },
       drive: function() {
         if(this.started) {
-          alert("Zoom zoom!");
+          if(this.fuel > 0) {
+            alert(this.make + " " + this.model + " goes zoom zoom!");
+            this.fuel = this.fuel - 1;
+          } else {
+            alert("Uh oh, out of fuel.");
+            this.stop();
+          }
         } else {
           alert("You need to start the engine first.");
         }
+      },
+      addFuel: function(amount) {
+        this.fuel = this.fuel + amount;
       }
     };
-    fiat.drive();
+    
     fiat.start();
+    fiat.drive();
+    fiat.addFuel(2);
+    fiat.start();
+    fiat.drive();
+    fiat.drive();
     fiat.drive();
     fiat.stop();
   </script>
