crack the code challenge

--- a/ch5/addingBehaviourToObjects.html
+++ b/ch5/addingBehaviourToObjects.html
@@ -14,7 +14,11 @@
       started: false,
       fuel: 0,
       start: function() {
-        this.started = true;
+        if(this.fuel > 0) {
+          this.started = true;
+        } else {
+          alert("The car is on empty, fill up before starting!");
+        }
       },
       stop: function() {
         this.started = false;
