--- a/ch6/aTestDriveAroundThePlanets.html
+++ b/ch6/aTestDriveAroundThePlanets.html
@@ -7,9 +7,15 @@
     function init() {
       var planet = document.getElementById('greenplanet');
       planet.innerHTML = 'Red Alert: hit by phaser fire!';
+      planet.setAttribute('class', 'redtext');
     }
     window.onload = init;
   </script>
+  <style>
+    .redtext {
+      color: red;
+    }
+  </style>
 </head>
 <body>
   <h1>Green Planet</h1>
